[package]
name = "vaultkeeper"
version = "0.1.0"
authors = ["Derek Stobbe <djstobbe@gmail.com>"]
edition = "2018"

[dependencies]
bracket-lib = { git = "https://github.com/thebracket/bracket-lib", features = ["serde"] }
legion = { git = "https://github.com/TomGillen/legion", features = ["default", "serialize"] }
log = "0.4.8"
ordered-float = "1.0.2"
pathfinding = "2.0.4"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
typetag = "0.1.4"

ai = { path = "./crates/ai" }
components = { path = "./crates/components" }
utils = { path = "./crates/utils" }
vaultkeeper_shared = { path = "./vaultkeeper_shared" }
vaultkeeper_delve = { path = "./vaultkeeper_delve" }

[workspace]
members = [
  "crates/*",
  "vaultkeeper_shared",
  "vaultkeeper_delve",
]
