[package]
name = "vaultkeeper"
version = "0.1.0"
authors = ["Derek Stobbe <djstobbe@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
bracket-lib = { git = "https://github.com/thebracket/bracket-lib", features = ["serde"] }
legion = { git = "https://github.com/TomGillen/legion", features = ["default", "serialize"] }
log = "0.4.8"
ordered-float = "1.0.2"
pathfinding = "2.0.4"
pretty_env_logger = "0.4.0"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
typetag = "0.1.4"
winit = { version = "", features = ["serde"] }
rand_pcg = "0.2.1"

[workspace]
members = []
