[package]
name = "vaultkeeper_delve"
version = "0.1.0"
edition = "2018"

[dependencies]
bracket-lib = { git = "https://github.com/thebracket/bracket-lib", features = ["serde"] }
legion = { git = "https://github.com/TomGillen/legion", features = ["default", "serialize"] }

components = { path = "../crates/components" }
vaultkeeper_shared = { path = "../vaultkeeper_shared" }
