[package]
name = "components"
version = "0.1.0"
edition = "2018"

[dependencies]
bracket-lib = { version = "0.7.0", features = ["serde"] }
legion = { git = "https://github.com/TomGillen/legion", features = ["serialize"] }
log = "0.4.8"
ordered-float = "1.0.2"
serde = { version = "1.0.104", features = ["derive"] }
typetag = "0.1.4"

utils = { path = "../utils" }
